<resources>
    <string name="app_name">Survey</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Survey GO</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="settings">Settings</string>
    <string name="success_submit">The survey has been submitted successfully</string>

    <!-- Strings related to Main Activity UI -->
    <string name="button_walmart">Walmart</string>
    <string name="initial_text">Select a store to capture data</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_first_name">First Name</string>
    <string name="pref_title_last_name">Last Name</string>
    <string name="pref_title_birth_year">Birth Year</string>
    <string name="pref_title_street">Street</string>
    <string name="pref_title_city">City</string>
    <string name="pref_title_postal_code">Postal Code</string>
    <string name="pref_title_email">Email</string>
    <string name="pref_title_phone">Phone</string>

    <string name="pref_title_gender">Gender</string>
    <string-array name="pref_gender_list_titles">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="pref_gender_list_values">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <!-- String for field keys -->
    <string name="key_storedId">Store name</string>

</resources>
